--- a/index.html
+++ b/index.html
@@ -390,20 +390,15 @@
 
         <div class="proj_el" id="proj2">
             <div class="proj_wrap">
-                <img class="proj_img" src="img/votex.png">
+                <img class="proj_img" src="img/web-scraper.jpg">
                 <div class="proj_overlay">
-                    <div class="proj_title">Votex</div>
-                    <p class="proj_descr">NodeJS app for poll creation.</p>
-                    <div class="proj_tags">#NodeJS #Pug #CSS #ChartJS #Heroku #MongoDB</div>
+                    <div class="proj_title">Web Scraper</div>
+                    <p class="proj_descr">Crawl the Web. Form a map. Analyze the data.</p>
+                    <div class="proj_tags">#Python #NumPy #MySQL</div>
                     <div class="proj_links">
-                        <a class="proj_link github" href="https://github.com/cat-ico/votingapp" target="_blank">
+                        <a class="proj_link github" href="https://github.com/win-han/web-crawler" target="_blank">
                             <svg>
                                 <use xlink:href="#github"></use>
-                            </svg>
-                        </a>
-                        <a class="proj_link" href="https://votexapp.herokuapp.com/" target="_blank">
-                            <svg>
-                                <use xlink:href="#link"></use>
                             </svg>
                         </a>
                     </div>
