--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         <h2 class="skills_title">About me</h2>
         <i class="skills_icon devicon-babel-plain"></i>
         <i class="skills_icon devicon-html5-plain-wordmark"></i>
-        <p class="skills_about">Web and app developer based in San Franscio, USA.
+        <p class="skills_about">Web and app developer based in San Francisco, USA.
             I have passion for the web and love creating websites and apps with great visual experience.
         </p>
         <i class="skills_icon devicon-sass-plain"></i>
