--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114579607-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-114579607-2');
+    <!-- Default Statcounter code for Personal Website https://win-han.github.io/
+-->
+    <script type="text/javascript">
+        var sc_project=12336603;
+        var sc_invisible=1;
+        var sc_security="65108b55";
+        var sc_https=1;
     </script>
+    <script type="text/javascript"
+            src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript><div class="statcounter"><a title="hit counter"
+                                          href="https://statcounter.com/" target="_blank"><img class="statcounter"
+                                                                                               src="https://c.statcounter.com/12336603/0/65108b55/1/" alt="hit
+counter"></a></div></noscript>
+    <!-- End of Statcounter Code -->
 
 </head>
 <body>
