--- a/index.html
+++ b/index.html
@@ -549,13 +549,13 @@ counter"></a></div></noscript>
                         </div>
                         <h3 class="icons_title">See my apps at <span>Play Store</span></h3>
                     </a>
-                    <a class="icons_el" href="mailto:winhan024@gmail.com">
+                    <a class="icons_el" href="mailto:soehan2009@gmail.com">
                         <div class="icons_icon">
                             <svg>
                                 <use xlink:href="#email"></use>
                             </svg>
                         </div>
-                        <h3 class="icons_title">Say hi at <span>winhan024@gmail.com</span></h3>
+                        <h3 class="icons_title">Say hi at <span>soehan2009@gmail.com</span></h3>
                     </a>
                     <div class="icons_el" id="hire"><div class="icons_icon"><svg><use xlink:href="#happy"></use></svg></div><h3 class="icons_title">Hire <span>me</span></h3></div></div></div></div><div class="contact_right"><div class="contact_form"><div class="contact_overlay">Thank you! I'll be in touch soon.</div><form id="contact_form" autocomplete="off" novalidate action="https://formspree.io/xnqgdvno" method="POST"><input type="hidden" name="_next" value="#contact_form"><input type="text" name="_gotcha" style="display:none"><span class="contact_input"><input class="contact_field" id="input-1" type="text" name="name" required><div class="contact_error" data-name="name">Please provide your name</div><label class="contact_label" for="input-1"><svg class="contact_border"><use xlink:href="#input"></use></svg><span class="contact_labelName">Name</span></label></span><span class="contact_input"><input class="contact_field" id="input-2" type="email" name="_reply_to" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,4}$" required><div class="contact_error" data-name="_reply_to">Please provide a valid email address</div><label class="contact_label" for="input-2"><svg class="contact_border"><use xlink:href="#input"></use></svg><span class="contact_labelName">Email</span></label></span><span class="contact_input"><textarea class="contact_field contact_msg" id="input-3" name="message" required></textarea><div class="contact_error" data-name="message">Please provide a message</div><label class="contact_label" for="input-3"><svg class="contact_border msg"><use xlink:href="#textarea"></use></svg><span class="contact_labelName">Message</span></label></span><button class="contact_submit" type="submit" value="Send"><span>Send</span></button></form></div></div></section></main>
 <script src="script.js"></script>
